--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+.container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
   margin: 0;
+}
+
+.container-content {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
