update UI-chat-header-signin-signup 7-5-2025

--- a/src/components/AuthInput/index.css
+++ b/src/components/AuthInput/index.css
@@ -63,3 +63,11 @@ label {
  outline: none;
  background-color: #4cae4c;
 }
+
+.container-page-auth {
+ margin: 0;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+}
