update init-chat-ui 9-3-2025

--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,10 @@
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
+  padding-top: 20pt;
 }
 
 body {
