--- a/src/pages/Chat/index.css
+++ b/src/pages/Chat/index.css
@@ -3,8 +3,9 @@
  flex-direction: column;
  justify-content: center;
  align-items: center;
- width: 400px;
- height: 600px;
+ max-width: 1000px;
+ height: 800px;
+ padding: 15px;
  border: 1px solid #ccc;
  border-radius: 10px;
  overflow: hidden;
@@ -12,16 +13,20 @@
 }
 
 .chat-messages {
- flex: 1;
- overflow-y: auto;
- padding: 10px;
+ max-width: 1000px;
+ overflow: scroll;
+ height: 700px;
+ padding: 25pt;
  display: flex;
+ border: solid skyblue;
+ border-radius: 17pt;
  flex-direction: column;
- gap: 10px;
+ gap: 15px;
+ background: #f9f9f9;
 }
 
 .message {
- max-width: 75%;
+ max-width: 45%;
  padding: 8px 12px;
  border-radius: 8px;
  word-wrap: break-word;
@@ -37,5 +42,4 @@
  align-self: flex-start;
  background-color: red;
  color: yellow;
-
 }
