--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100vh;
   padding-top: 20pt;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
+  min-height: 100vh;
 }
