--- a/src/pages/Chat/index.css
+++ b/src/pages/Chat/index.css
@@ -1,5 +1,3 @@
-
-
 .chat-messages {
  width: 1000px;
  overflow-y: auto;
@@ -15,8 +13,8 @@
 
 .message {
  max-width: 45%;
- padding: 8px 12px;
- border-radius: 8px;
+ padding: 9pt 14pt;
+ border-radius: 11pt;
  word-wrap: break-word;
 }
 
