--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
   padding-top: 20pt;
   min-height: 100vh;
 }
