--- a/src/pages/Chat/index.css
+++ b/src/pages/Chat/index.css
@@ -14,7 +14,7 @@
 .message {
  max-width: 45%;
  padding: 9pt 14pt;
- border-radius: 11pt;
+ border-radius: 9pt;
  word-wrap: break-word;
 }
 
@@ -26,6 +26,6 @@
 
 .message.other {
  align-self: flex-start;
- background-color: red;
+ background-color: blue;
  color: yellow;
 }
